<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="34dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:letterSpacing="0"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:letterSpacing="0.01"
            android:textSize="12sp"
            android:textColor="@color/by"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/input"
            android:drawableStart="@drawable/username"
            android:hint="@string/enter_your_name"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"
            android:textColor="@color/by"
            android:drawablePadding="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:letterSpacing="0.01"
            android:textSize="12sp"
            android:textColor="@color/by"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/input"
            android:drawableStart="@drawable/email"
            android:hint="@string/enter_your_e_mail_here"
            android:paddingStart="16dp"
            android:textColor="@color/by"
            android:drawablePadding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:letterSpacing="0.01"
            android:textSize="12sp"
            android:textColor="@color/by"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/input"
            android:drawableStart="@drawable/locked"
            android:hint="@string/enter_your_e_mail_here"
            android:paddingStart="16dp"
            android:drawableEnd="@drawable/hide_password"
            android:drawablePadding="8dp"
            android:paddingEnd="15dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/no_data"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/no_data"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/no_data"
            android:layout_marginStart="24dp"
            android:layout_marginTop="62dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_least_8_characters"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/by"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both_uppercase_and_lowercase_characters"
            android:layout_marginStart="48dp"
            android:layout_marginTop="34dp"
            android:textColor="@color/by"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_least_one_number_or_symbol"
            android:layout_marginStart="48dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/by" />
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vector1"
            android:background="@drawable/vector_67"
            android:layout_marginTop="98dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>
    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkbox_meat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_you_accept_our_privacy_policy_and_term_of_use1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/by"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button__1_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_meat"
        android:layout_marginEnd="24dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:drawableEnd="@drawable/arrow_long_right"
        android:paddingEnd="20dp"
        android:paddingStart="10dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/vector_67__2_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:letterSpacing="0.01"
        android:text="@string/or"
        android:textColor="@color/Or"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/vector_67__2_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginEnd="24dp"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gsuite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="114dp"
        android:layout_marginTop="27dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/fb"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/Or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google"
        android:textSize="12sp"
        android:letterSpacing="0.01"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/login"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:letterSpacing="0.01"/>

</androidx.constraintlayout.widget.ConstraintLayout>